; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_videoport.c_CommandDma.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_videoport.c_CommandDma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.PicoVideo }
%struct.PicoVideo = type { i32* }

@Pico = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @CommandDma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CommandDma() #0 {
  %1 = alloca %struct.PicoVideo*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store %struct.PicoVideo* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Pico, i32 0, i32 0), %struct.PicoVideo** %1, align 8
  store i32 0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load %struct.PicoVideo*, %struct.PicoVideo** %1, align 8
  %5 = getelementptr inbounds %struct.PicoVideo, %struct.PicoVideo* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 1
  %8 = load i32, i32* %7, align 4
  %9 = and i32 %8, 16
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %0
  br label %31

12:                                               ; preds = %0
  %13 = call i32 (...) @GetDmaLength()
  store i32 %13, i32* %2, align 4
  %14 = load %struct.PicoVideo*, %struct.PicoVideo** %1, align 8
  %15 = getelementptr inbounds %struct.PicoVideo, %struct.PicoVideo* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 23
  %18 = load i32, i32* %17, align 4
  %19 = ashr i32 %18, 6
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* %3, align 4
  %21 = icmp slt i32 %20, 2
  br i1 %21, label %22, label %25

22:                                               ; preds = %12
  %23 = load i32, i32* %2, align 4
  %24 = call i32 @DmaSlow(i32 %23)
  br label %25

25:                                               ; preds = %22, %12
  %26 = load i32, i32* %3, align 4
  %27 = icmp eq i32 %26, 3
  br i1 %27, label %28, label %31

28:                                               ; preds = %25
  %29 = load i32, i32* %2, align 4
  %30 = call i32 @DmaCopy(i32 %29)
  br label %31

31:                                               ; preds = %11, %28, %25
  ret void
}

declare dso_local i32 @GetDmaLength(...) #1

declare dso_local i32 @DmaSlow(i32) #1

declare dso_local i32 @DmaCopy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
